Scrollbars fixed.
git-svn-id: https://server.mycore.de/svn/mycore/trunk@16802 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/mycore-iview2/src/main/resources/components/iview2/web/modules/iview2/web/gfx/default/style.css
+++ b/mycore-iview2/src/main/resources/components/iview2/web/modules/iview2/web/gfx/default/style.css
@@ -268,7 +268,7 @@
 }
 .buttonSurface .BSE_backwardBehind {
 	position: absolute;
-	top: -30px;
+	top: 10px;
 	background-image: url('image.png');
 	background-repeat: no-repeat;
 	background-position: -90px -0px;
@@ -293,7 +293,7 @@
 }
 .buttonSurface .BSE_forwardBehind {
 	position: absolute;
-	top: -30px;
+	top: 10px;
 	background-image: url('image.png');
 	background-repeat: no-repeat;
 	background-position: -150px -0px;
